--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-mounter",
-  "version": "1.2.0",
+  "name": "@xch/react-mounter",
+  "version": "1.2.1",
   "description": "React Mounter lets you mount React components to DOM easily.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kadirahq/react-mounter.git"
+    "url": "https://github.com/Zodiase/react-mounter.git"
   },
   "license": "MIT",
   "options": {
@@ -32,15 +32,15 @@
     "babel-plugin-transform-runtime": "6.x.x",
     "babel-preset-react": "6.x.x",
     "babel-plugin-react-require": "2.x.x",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "mock-require": "1.x.x",
     "sinon": "1.17.x",
     "eslint-plugin-react": "3.x.x"
   },
   "peerDependencies": {
-    "react": "0.14.x || 15.x.x",
-    "react-dom": "0.14.x || 15.x.x"
+    "react": "0.14.x || 15.x.x || 16.x.x",
+    "react-dom": "0.14.x || 15.x.x || 16.x.x"
   },
   "dependencies": {
     "babel-runtime": "6.x.x",
